move client js and css assets into modules/digitopia-cms

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,167 +1,1 @@
-$mdc-typography-font-family: unquote("-apple-system, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif, \"Apple Color Emoji\", \"Segoe UI Emoji\", \"Segoe UI Symbol\"");
-
-$mdc-theme-primary: #333;
-$mdc-theme-accent: #b2e800;
-$mdc-theme-hint: #1a237e;
-$mdc-theme-surface: white;
-
-$darker-accent: #95c200;
-
-@import "@material/typography/mdc-typography";
-@import "@material/theme/mdc-theme";
-@import "@material/list/mdc-list";
-@import "@material/top-app-bar/mdc-top-app-bar";
-@import "@material/drawer/mdc-drawer";
-@import "@material/button/mdc-button";
-@import "@material/data-table/mdc-data-table";
-@import "@material/dialog/mdc-dialog";
-@import "@material/form-field/mdc-form-field";
-@import "@material/checkbox/mdc-checkbox";
-@import "@material/textfield/mdc-text-field";
-@import "@material/textfield/helper-text/mdc-text-field-helper-text";
-@import "@material/textfield/icon/mdc-text-field-icon";
-@import "@material/layout-grid/mdc-layout-grid";
-@import "@material/snackbar/mdc-snackbar";
-@import "@material/elevation/mdc-elevation";
-@import "@material/fab/mdc-fab";
-@import "@material/select/mdc-select";
-@import "@material/switch/mdc-switch";
-@import "@material/linear-progress/mdc-linear-progress";
-@import "@material/ripple/mdc-ripple";
-@import "@material/chips/mdc-chips";
-
-$fa-font-path: "../../node_modules/@fortawesome/fontawesome-free/webfonts";
-@import "@fortawesome/fontawesome-free/scss/fontawesome";
-@import "@fortawesome/fontawesome-free/scss/solid";
-@import "@fortawesome/fontawesome-free/scss/regular";
-
-$material-design-icons-font-directory-path: '~material-design-icons-iconfont/dist/fonts/';
-
-@import '~material-design-icons-iconfont/src/material-design-icons';
-
-.progress {
-	@include mdc-linear-progress-bar-color($darker-accent);
-}
-
-.primary-button {
-	@include mdc-button-container-fill-color($mdc-theme-accent);
-	@include mdc-button-ink-color($mdc-theme-primary);
-}
-
-.mdc-top-app-bar__navigation-icon {
-	text-decoration: none;
-}
-
-.mdc-drawer-scrim {
-	background-color: rgba(0,0,0,.5);
-}
-
-.mdc-text-field {
-	background-color: white!important;
-}
-
-.zmdc-floating-label {
-	transform: translateY(-50%) scale(0.75)!important;
-}
-
-a:focus {
-	outline:none;
-	text-decoration: none;
-}
-
-.mdc-top-app-bar {
-	top:0px;
-	color:$darker-accent;
-}
-
-.mdc-snackbar {
-	bottom: .5rem;
-}
-
-.app-fab-fixed {
-	position: fixed;
-	bottom: 1rem;
-	right: 1rem;
-}
-
-.highlighted {
-	color: $mdc-theme-secondary
-}
-
-// lifted from boostrap
-.pagination {
-  display: flex;
-  padding-left: 0;
-  list-style: none;
-  border-radius: 0.25rem; }
-
-.page-link {
-	text-decoration: none;
-  position: relative;
-  display: block;
-  padding: 0.5rem 0.75rem;
-  margin-left: -1px;
-  line-height: 1.25;
-  color: #333;
-  background-color: #fff;
-  border: 1px solid #dee2e6; }
-  .page-link:hover {
-    z-index: 2;
-    color: #0d0d0d;
-    text-decoration: none;
-    background-color: #e9ecef;
-    border-color: #dee2e6; }
-  .page-link:focus {
-    z-index: 2;
-    outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
-  .page-link:not(:disabled):not(.disabled) {
-    cursor: pointer; }
-
-.page-item:first-child .page-link {
-  margin-left: 0;
-  border-top-left-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem; }
-
-.page-item:last-child .page-link {
-  border-top-right-radius: 0.25rem;
-  border-bottom-right-radius: 0.25rem; }
-
-.page-item.active .page-link {
-  z-index: 1;
-  color: #fff;
-  background-color: #007bff;
-  border-color: #007bff; }
-
-.page-item.disabled .page-link {
-  color: #6c757d;
-  pointer-events: none;
-  cursor: auto;
-  background-color: #fff;
-  border-color: #dee2e6; }
-
-.pagination-lg .page-link {
-  padding: 0.75rem 1.5rem;
-  font-size: 1.25rem;
-  line-height: 1.5; }
-
-.pagination-lg .page-item:first-child .page-link {
-  border-top-left-radius: 0.3rem;
-  border-bottom-left-radius: 0.3rem; }
-
-.pagination-lg .page-item:last-child .page-link {
-  border-top-right-radius: 0.3rem;
-  border-bottom-right-radius: 0.3rem; }
-
-.pagination-sm .page-link {
-  padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
-  line-height: 1.5; }
-
-.pagination-sm .page-item:first-child .page-link {
-  border-top-left-radius: 0.2rem;
-  border-bottom-left-radius: 0.2rem; }
-
-.pagination-sm .page-item:last-child .page-link {
-  border-top-right-radius: 0.2rem;
-  border-bottom-right-radius: 0.2rem; }
+@import "../../modules/digitopia-cms/assets/scss/app.scss";
