move ES5 js into ES6 utils.js

--- a/views/wrapper.pug
+++ b/views/wrapper.pug
@@ -79,6 +79,6 @@ html
       script(src="/dist/js/userapp.js")
         
     script(nonce= nonce).
-      boot();
+      App.boot();
       
     #ephemeral
