--- a/views/wrapper.pug
+++ b/views/wrapper.pug
@@ -77,6 +77,6 @@ html
       script(src="/dist/js/userapp.js")
         
     script(nonce= nonce).
-      App.boot();
+      App.Utils.boot();
       
     #ephemeral
