--- a/modules/digitopia-cms/views/login.pug
+++ b/modules/digitopia-cms/views/login.pug
@@ -10,7 +10,7 @@ block content
 			.reg-form.clear-fix.mdc-elevation--z1
 				section.form-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
-						input#email.mdc-text-field__input(name="email" data-validate= validators.email value="")
+						input#email.mdc-text-field__input(autocomplete="username" name="email" data-validate= validators.email value="")
 						label.mdc-floating-label(for="email") Email Address
 						.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
 						.mdc-line-ripple
