--- a/views/components/drawer.pug
+++ b/views/components/drawer.pug
@@ -11,16 +11,22 @@ aside#nav-drawer.drawer-top.mdc-drawer.mdc-drawer--dismissible
 
 			.hidden-logged-out
 				a.nav-item.mdc-list-item(href="/users/home")
-					i.material-icons.mdc-list-item__graphic person
+					i.material-icons.mdc-list-item__graphic home
 					span.mdc-list-item__text User Home
 				a.nav-item.mdc-list-item(href="/users/settings")
 					i.material-icons.mdc-list-item__graphic settings_applications
 					span.mdc-list-item__text Settings
-				a.nav-item.mdc-list-item(href="#" data-jsclass="ajaxButton" data-confirm="#confirm-dialog" data-confirm-prompt="Logout?" data-endpoint='/api/users/logout' data-method="DELETE" data-no-hijax="true" data-redirect="/users/login" ) Logout
+				a.nav-item.mdc-list-item(href="#" data-jsclass="ajaxButton" data-confirm="#confirm-dialog" data-confirm-prompt="Logout?" data-endpoint='/api/users/logout' data-method="DELETE" data-no-hijax="true" data-redirect="/users/login" )
+					i.material-icons.mdc-list-item__graphic person
+					span.mdc-list-item__text Logout
+			
+			a.nav-item.mdc-list-item(href="/policies")
+				i.material-icons.mdc-list-item__graphic lock
+				span.mdc-list-item__text Use and Privacy Policies
 			
 			.hidden-not-admin
 				hr.mdc-list-divider
 				a.nav-item.mdc-list-item(href="/admin/menu")
-					i.material-icons.mdc-list-item__graphic supervisor_account
+					i.material-icons.mdc-list-item__graphic publish
 					span.mdc-list-item__text Site Admin
 .mdc-drawer-scrim
