--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -125,6 +125,9 @@ h2
 		font-size: 30px!important
 		vertical-align: text-bottom
 
+.fas
+	font-size: 18px
+
 // form post error notifications
 
 .ajax-errors
