--- a/views/components/drawer.pug
+++ b/views/components/drawer.pug
@@ -14,10 +14,10 @@ aside#nav-drawer.drawer-top.mdc-drawer.mdc-drawer--dismissible
 					i.material-icons.mdc-list-item__graphic home
 					span.mdc-list-item__text User Home
 				a.nav-item.mdc-list-item(href="/users/settings")
-					i.material-icons.mdc-list-item__graphic settings_applications
+					i.mdc-list-item__graphic.fas.fa-user-cog
 					span.mdc-list-item__text Settings
 				a.nav-item.mdc-list-item(href="#" data-jsclass="ajaxButton" data-confirm="#confirm-dialog" data-confirm-prompt="Logout?" data-endpoint='/api/users/logout' data-method="DELETE" data-no-hijax="true" data-redirect="/users/login" )
-					i.material-icons.mdc-list-item__graphic person
+					i.mdc-list-item__graphic.fas.fa-sign-out-alt
 					span.mdc-list-item__text Logout
 			
 			a.nav-item.mdc-list-item(href="/policies")
