--- a/modules/digitopia-cms/assets/scss/app.scss
+++ b/modules/digitopia-cms/assets/scss/app.scss
@@ -29,6 +29,8 @@ $darker-accent: #95c200;
 @import "@material/linear-progress/mdc-linear-progress";
 @import "@material/ripple/mdc-ripple";
 @import "@material/chips/mdc-chips";
+@import "@material/card/mdc-card";
+
 
 $fa-font-path: "../../node_modules/@fortawesome/fontawesome-free/webfonts";
 @import "@fortawesome/fontawesome-free/scss/fontawesome";
