add recaptcha3 to password reset request form.

--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -723,3 +723,8 @@ li
 .ProseMirror h5:first-child,
 .ProseMirror h6:first-child
 		margin-top 10px
+
+.grecaptcha-badge
+	visibility:hidden
+	.show-recaptcha-badge &
+		visibility:visible
