edit date input value YYYY-MM-DD

--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -347,13 +347,15 @@ tr.hovering
 			img
 				max-width: 250px
 				height:auto
-	input[type="text"],textarea
+	input[type="text"],textarea, input[type="date"]
 		font-size:1em
 		width: 100%
 		padding: .5em
+	input[type="date"]
+		width: 200px
 	select
 		min-width: 80%
-	input[type="text"], select, textarea
+	input[type="text"], select, textarea, input[type="date"]
 		border: thin solid #999
 		&:focus
 			border-color: #888;
