start migration to new responsive.js framework

--- a/modules/digitopia-cms/views/admin/edit.pug
+++ b/modules/digitopia-cms/views/admin/edit.pug
@@ -23,7 +23,7 @@ block content
 										
 				.page-content
 					.admin-form
-						form.form-validation(data-jsclass="formValidator" data-submitter="#submitter")
+						form.form-validation(data-responsive-class="formValidator" data-submitter="#submitter")
 							input(type="hidden" name="_csrf" value= csrfToken)
 
 							.flextable(data-jsclass="flexTable" data-break="screen-xsmall,screen-small")
