--- a/modules/digitopia-cms/views/admin/list.pug
+++ b/modules/digitopia-cms/views/admin/list.pug
@@ -28,7 +28,7 @@ block content
 						else
 							
 							section.admin-search
-								form.form-validation(data-jsclass="formValidator" data-submitter=".search-button")
+								form.form-validation(data-responsive-class="formValidator" data-submitter=".search-button")
 									.form-group
 										table
 											tr
