--- a/modules/digitopia-cms/views/password-change.pug
+++ b/modules/digitopia-cms/views/password-change.pug
@@ -6,7 +6,7 @@ block content
 			i.material-icons lock
 			|  Change Password
 				
-		form.form.form-validation(action="/api/users/password-change" method="PATCH" data-jsclass="formValidator,formController" data-submitter="#submitter")
+		form.form.form-validation(action="/api/users/password-change" method="PATCH" data-responsive-class="formValidator,formController" data-submitter="#submitter")
 			input(type="hidden" name="_csrf" value= csrfToken)
 
 			.reg-form.clear-fix.mdc-elevation--z1
