--- a/modules/digitopia-cms/views/photo.pug
+++ b/modules/digitopia-cms/views/photo.pug
@@ -9,7 +9,7 @@ block content
 	.reg-form-container.centered
 		.reg-form.clear-fix.mdc-elevation--z1
 			.admin-form
-				form.form-validation(action="/users/profile-photo" method="PATCH" data-jsclass="formController,formValidator" data-submitter="#submitter" data-redirect="/users/settings")
+				form.form-validation(action="/users/profile-photo" method="PATCH" data-responsive-class="formController,formValidator" data-submitter="#submitter" data-redirect="/users/settings")
 					table
 						tr
 							td!= uploadFormElement
