--- a/modules/digitopia-cms/views/subscription.pug
+++ b/modules/digitopia-cms/views/subscription.pug
@@ -39,7 +39,7 @@ block content
 			if stripe.subscriptions.data.length && !cancelled
 				- canSubscribe = false
 				p
-					a(href="#" data-jsclass="ajaxButton" data-confirm="#confirm-dialog" data-confirm-prompt="Cancel Subscription?" data-endpoint='/api/users/subscription-cancel' data-no-hijax="true" data-method="delete" data-redirect="/users/subscription") Click Here 
+					a(href="#" data-responsive-class="ajaxButton" data-confirm="#confirm-dialog" data-confirm-prompt="Cancel Subscription?" data-endpoint='/api/users/subscription-cancel' data-no-hijax="true" data-method="delete" data-redirect="/users/subscription") Click Here 
 					|  to cancel your subscription at end of current period.
 					
 			.flextable(data-jsclass="flexTable" data-break="screen-xsmall")
@@ -94,9 +94,9 @@ block content
 		if canSubscribe
 			section.button-bar
 				| Subscribe: 
-				button.mdc-button.mdc-button--raised(data-jsclass="stripeClientCheckout" data-stripe-pk= publicOptions.STRIPE_PUBLIC data-host= publicOptions.PUBLIC_HOST data-user-id= user.id data-email= user.email data-plan= publicOptions.STRIPE_YEARLY)
+				button.mdc-button.mdc-button--raised(data-responsive-class="stripeClientCheckout" data-stripe-pk= publicOptions.STRIPE_PUBLIC  data-user-id= user.id data-email= user.email data-plan= publicOptions.STRIPE_YEARLY)
 					span.mdc-button-label Yearly $10
-				button.mdc-button.mdc-button--raised(data-jsclass="stripeClientCheckout" data-stripe-pk= publicOptions.STRIPE_PUBLIC data-host= publicOptions.PUBLIC_HOST data-user-id= user.id data-email= user.email data-plan= publicOptions.STRIPE_MONTHLY)
+				button.mdc-button.mdc-button--raised(data-responsive-class="stripeClientCheckout" data-stripe-pk= publicOptions.STRIPE_PUBLIC  data-user-id= user.id data-email= user.email data-plan= publicOptions.STRIPE_MONTHLY)
 					span.mdc-button-label Monthly $1
 
 		#error-message
