--- a/modules/digitopia-cms/views/admin/view.pug
+++ b/modules/digitopia-cms/views/admin/view.pug
@@ -12,7 +12,7 @@ block content
 
 	.admin-container
 		.admin.clear-fix.mdc-elevation--z1
-			div(data-jsclass="adminController" data-mountpoint= mountpoint data-model= admin.name data-id= row.id data-redirect= back)
+			div(data-responsive-class="adminController" data-mountpoint= mountpoint data-model= admin.name data-id= row.id data-redirect= back)
 				.page-header
 					h2
 						a.back-button(href= back)
@@ -24,7 +24,7 @@ block content
 					
 				.page-content
 					.admin-form
-						.flextable(data-jsclass="flexTable" data-break="screen-xsmall,screen-small")
+						.flextable(data-responsive-class="flexTable" data-break="screen-xsmall,screen-small")
 							ul
 								li
 								li
