--- a/modules/digitopia-cms/views/admin/edit.pug
+++ b/modules/digitopia-cms/views/admin/edit.pug
@@ -7,7 +7,7 @@ block content
 		
 	.admin-container
 		.admin.clear-fix.mdc-elevation--z1
-			div(data-jsclass="adminController" data-mountpoint= mountpoint data-model= admin.name data-id= row.id data-redirect= back)
+			div(data-responsive-class="adminController" data-mountpoint= mountpoint data-model= admin.name data-id= row.id data-redirect= back)
 			
 				.page-header
 					h2
@@ -26,7 +26,7 @@ block content
 						form.form-validation(data-responsive-class="formValidator" data-submitter="#submitter")
 							input(type="hidden" name="_csrf" value= csrfToken)
 
-							.flextable(data-jsclass="flexTable" data-break="screen-xsmall,screen-small")
+							.flextable(data-responsive-class="flexTable" data-break="screen-xsmall,screen-small")
 								ul
 									li
 									li
