--- a/modules/digitopia-cms/views/subscription.pug
+++ b/modules/digitopia-cms/views/subscription.pug
@@ -42,7 +42,7 @@ block content
 					a(href="#" data-responsive-class="ajaxButton" data-confirm="#confirm-dialog" data-confirm-prompt="Cancel Subscription?" data-endpoint='/api/users/subscription-cancel' data-no-hijax="true" data-method="delete" data-redirect="/users/subscription") Click Here 
 					|  to cancel your subscription at end of current period.
 					
-			.flextable(data-jsclass="flexTable" data-break="screen-xsmall")
+			.flextable(data-responsive-class="flexTable" data-break="screen-xsmall")
 				ul
 					li Date
 					li Description
