--- a/modules/digitopia-cms/views/admin/dashboard.pug
+++ b/modules/digitopia-cms/views/admin/dashboard.pug
@@ -9,4 +9,4 @@ block content
 			.page-content
 				p A bunch of charts here
 				
-				div(data-responsive-class="digitopiaAnalyticsReport" data-endpoint= publicOptions.USER_BEHAVIOR.mountPoint + '/report')
+				div(data-reagent-class="digitopiaAnalyticsReport" data-endpoint= publicOptions.USER_BEHAVIOR.mountPoint + '/report')
