--- a/modules/digitopia-cms/views/admin/type-markdown.pug
+++ b/modules/digitopia-cms/views/admin/type-markdown.pug
@@ -1,4 +1,4 @@
-.form-group.markdown-editor(data-responsive-class="markdownEditor" data-target=".current-editor" data-content=".target")
+.form-group.markdown-editor(data-reagent-class="markdownEditor" data-target=".current-editor" data-content=".target")
 	textarea.target(style="display:none" name= name data-validate= options.validate)= value
 	.current-editor
 	.view-mode.pull-right
