--- a/modules/digitopia-cms/views/admin/create.pug
+++ b/modules/digitopia-cms/views/admin/create.pug
@@ -7,7 +7,7 @@ block content
 	
 	.admin-container
 		.admin.clear-fix.mdc-elevation--z1
-			div(data-responsive-class="adminController" data-mountpoint= mountpoint data-model= admin.name data-redirect= back)
+			div(data-reagent-class="adminController" data-mountpoint= mountpoint data-model= admin.name data-redirect= back)
 			
 				.page-header
 					h2
@@ -17,12 +17,12 @@ block content
 					
 				.page-content
 					.admin-form
-						form.form-validation(data-responsive-class="formValidator" data-submitter="#submitter")
+						form.form-validation(data-reagent-class="formValidator" data-submitter="#submitter")
 							input(type="hidden" name="_csrf" value= csrfToken)
 
 							if fk
 								input(type="hidden" name= admin.name + '['+fk+']' value= belongsTo)
-							.flextable(data-responsive-class="flexTable" data-break="screen-xsmall,screen-small")
+							.flextable(data-reagent-class="flexTable" data-break="screen-xsmall,screen-small")
 								ul
 									li
 									li
