--- a/modules/digitopia-cms/views/email-change.pug
+++ b/modules/digitopia-cms/views/email-change.pug
@@ -6,7 +6,7 @@ block content
 			i.material-icons mail_outline
 			|  Change Email Address
 		
-		form.form.form-validation(action="/api/users/email-change" method="PATCH" data-responsive-class="formValidator,formController" data-submitter="#submitter")
+		form.form.form-validation(action="/api/users/email-change" method="PATCH" data-reagent-class="formValidator,formController" data-submitter="#submitter")
 			input(type="hidden" name="_csrf" value= csrfToken)
 			.reg-form.clear-fix.mdc-elevation--z1
 				section.form-group
