add .hijax-loading css

--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -19,6 +19,11 @@ body
 	//background-image:url(/images/square_bg_big.png);
 	background-attachment: fixed;
 
+.hijax-loading
+	#content-body
+		quick()
+		opacity: .1
+
 a
 	color: #333
 
