use default breakpoints from reagent

--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -34,18 +34,18 @@ h1,h2,h3,h4
 // room for nav bar
 .top-margin
 	margin-top: 64px
-	.screen-xsmall &
+	.screen-xs &
 		margin-top: 56px
 
 .drawer-top
 	position:fixed
 	top: 64px
-	.screen-xsmall &
+	.screen-xs &
 		top: 56px
 
 .page-header
 	padding-top: 1em
-	.not-screen-xsmall &
+	.not-screen-xs &
 		.no-icon
 			margin-left: 2em
 		.back-button
@@ -57,7 +57,7 @@ h1,h2,h3,h4
 	background-color: white
 	min-height: calc(80vh - 200px)
 	padding:.5em
-	.not-screen-xsmall &
+	.not-screen-xs &
 		padding:1em
 		margin-left:2em
 		margin-right:2em
@@ -277,11 +277,11 @@ input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focu
 	max-width: 300px
 	height: calc(100vh - 64px)
 	background-color:white
-	.screen-xsmall &
+	.screen-xs &
 		height: calc(100vh - 56px)
 	&.open
 		top:64px
-		.screen-xsmall &
+		.screen-xs &
 			top:56px
 
 
@@ -377,7 +377,7 @@ tr.hovering
 	.mdc-switch
 		margin: 1em
 	.label
-		.not-screen-xsmall &
+		.not-screen-xs &
 			width: 250px
 		&.edit
 			padding-top:18px
