--- a/modules/digitopia-cms/views/admin/create.pug
+++ b/modules/digitopia-cms/views/admin/create.pug
@@ -22,7 +22,7 @@ block content
 
 							if fk
 								input(type="hidden" name= admin.name + '['+fk+']' value= belongsTo)
-							.flextable(data-reagent-class="flexTable" data-break="screen-xsmall,screen-small")
+							.flextable(data-reagent-class="flexTable" data-break="screen-xs,screen-sm")
 								ul
 									li
 									li
