--- a/modules/digitopia-cms/views/admin/list.pug
+++ b/modules/digitopia-cms/views/admin/list.pug
@@ -47,7 +47,7 @@ block content
 								p No rows found
 					else
 						.admin-form
-							.flextable(data-reagent-class="flexTable" data-break="screen-xsmall,screen-small")
+							.flextable(data-reagent-class="flexTable" data-break="screen-xs,screen-sm")
 								ul
 									li id
 									for property in admin.options.listColumns
