--- a/modules/digitopia-cms/views/admin/view.pug
+++ b/modules/digitopia-cms/views/admin/view.pug
@@ -24,7 +24,7 @@ block content
 					
 				.page-content
 					.admin-form
-						.flextable(data-reagent-class="flexTable" data-break="screen-xsmall,screen-small")
+						.flextable(data-reagent-class="flexTable" data-break="screen-xs,screen-sm")
 							ul
 								li
 								li
