--- a/modules/digitopia-cms/views/admin/edit.pug
+++ b/modules/digitopia-cms/views/admin/edit.pug
@@ -26,7 +26,7 @@ block content
 						form.form-validation(data-reagent-class="formValidator" data-submitter="#submitter")
 							input(type="hidden" name="_csrf" value= csrfToken)
 
-							.flextable(data-reagent-class="flexTable" data-break="screen-xsmall,screen-small")
+							.flextable(data-reagent-class="flexTable" data-break="screen-xs,screen-sm")
 								ul
 									li
 									li
