--- a/modules/digitopia-cms/views/password-set.pug
+++ b/modules/digitopia-cms/views/password-set.pug
@@ -8,7 +8,7 @@ block content
 			.alert.alert-error= error
 		else
 			
-			form.form.form-validation(action="/api/users/password-set" method="PATCH" data-reagent-class="formValidator,formController" data-submitter="#submitter" data-redirect="/users/login")
+			form.form.form-validation(action="/api/users/password-set" method="PATCH" data-sargasso-class="formValidator,formController" data-submitter="#submitter" data-redirect="/users/login")
 				input(type="hidden" name="_csrf" value= csrfToken)
 
 				.reg-form.clear-fix.mdc-elevation--z1
