--- a/views/wrapper.pug
+++ b/views/wrapper.pug
@@ -74,9 +74,22 @@ html
     if env === 'production'
       script(src="/dist/js/userapp.min.js")
     else
-			
+      
       script(type="module" nonce= nonce).
         import { Utils } from "/dist/js/bundle.es.js"
         Utils.boot() 
-      
+    
+    
+    aside#confirm-dialog.mdc-dialog(role="alertdialog")
+      .mdc-dialog__container
+        .mdc-dialog__surface
+            h2.mdc-dialog__title title
+            .mdc-dialog__content prompt
+            footer.mdc-dialog__actions
+              button.mdc-button.mdc-dialog__button.mdc-dialog-cancel(data-mdc-dialog-action="cancel")
+                .mdc-button__label Cancel
+              button.mdc-button.mdc-dialog__button(data-mdc-dialog-action="accept" data-mdc-dialog-button-default)
+                .mdc-button__label Continue
+      .mdc-dialog__scrim
+
     #ephemeral
